# jiansoft-esp32

main/: CMakeLists.txt  README.md  main.c
main/app/: my_ucp.c  my_ucp.h
main/components/net/activate/: SPEC.md  activate.h
main/components/net/ucp/include/: list.h  os_interfaces.h  os_socket.h  os_udp.h  ucp.h  utils.h
main/components/net/ucp/src/: ucp.c  ucp_private.h  ucp_recv.c  ucp_send.c  ucpjnilib.c
main/components/net/ucp/src/utils/: os_interfaces.c  os_socket.c  os_udp.c  utils.c
main/components/wifi/: SPEC.md  my_sta.c
main/components/wifi/include/: my_sta.h
main/docs/: template.c  template.h
main/drivers/wifi/: wifi_ap.c
main/drivers/wifi/include/: wifi_ap.h
